* Bugfix: When using maxTime != 0, the number of experiments performed may be    miscounted in some cases.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1745 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -60,7 +60,10 @@
 
    which just evaluates the configurations given in FILE on the testing
    instances defined by the scenario. Useful if you decide on the testing
-   instances only after running irace. (Manuel López-Ibáñez)
+   instances only after running irace.    (Manuel López-Ibáñez)
+
+ * Bugfix: When using maxTime != 0, the number of experiments performed may be
+   miscounted in some cases.              (Manuel López-Ibáñez)
 
 
 2.1
