NEWS: mention another feature.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1747 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+ * Command-line parameters are printed to stdout (useful for future
+   replications). (Manuel López-Ibáñez, suggested by Markus Wagner)
+
  * Users may provide a function to repair configurations before being
    evaluated. See the scenario variable repairConfiguration.
                                                      (Manuel López-Ibáñez)
