* tests/testthat.R (test.checkForbidden): New test.  * man/readConfigurationsFile.Rd: Update.  * R/readConfiguration.R (readConfigurationsFile): Add text=.  (readForbiddenFile): New. Use compiler.  * R/generation.R: Add FIXME.  * NEWS: Update.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1757 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+ * readConfigurationsFile() now has a text= argument, which allows reading
+   configurations from a string.
+                                                     (Manuel López-Ibáñez)
+ * Conditions for forbidden configurations and the repairConfiguration function
+   are now byte-compiled when read, which should make their evaluation
+   noticeably faster.
+                                                     (Manuel López-Ibáñez)
+
 2.2
 
  * Command-line parameters are printed to stdout (useful for future
