--- a/NEWS
+++ b/NEWS
@@ -1,10 +1,11 @@
  * readConfigurationsFile() now has a text= argument, which allows reading
    configurations from a string.
                                                      (Manuel López-Ibáñez)
- * Conditions for forbidden configurations and the repairConfiguration function
-   are now byte-compiled when read, which should make their evaluation
-   noticeably faster.
-                                                     (Manuel López-Ibáñez)
+
+ * Conditions for forbidden configurations and the targetRunner,
+   targetEvaluator and repairConfiguration functions are now byte-compiled
+   when read, which should make their evaluation noticeably faster.
+                                                      (Manuel López-Ibáñez)
 
 2.2
 
