* R/utils.R (is.bytecode, bytecompile): New.  * R/readParameters.R: Use TRUE instead of expression(TRUE) for always true conditions.  * R/readConfiguration.R: Use bytecompile to avoid recompiling if the functions are already compiled.  * R/generation.R: Just check for TRUE in case of unconstrained parameters.  * NEWS: Rephrase.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1759 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -2,9 +2,10 @@
    configurations from a string.
                                                      (Manuel López-Ibáñez)
 
- * Conditions for forbidden configurations and the targetRunner,
-   targetEvaluator and repairConfiguration functions are now byte-compiled
-   when read, which should make their evaluation noticeably faster.
+ * User-provided functions (targetRunner, targetEvaluator and
+   repairConfiguration) and user-provided conditions for forbidden
+   configurations are now byte-compiled when read, which should make their
+   evaluation noticeably faster.
                                                       (Manuel López-Ibáñez)
 
 2.2
