* R/utils.R (path.rel2abs): Fix issues with windows drives. Add a lot more tests for Windows.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1771 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+ * Several fixes for handling paths in Windows.
+                                                     (Manuel López-Ibáñez)
+                                                     
  * readConfigurationsFile() now has a text= argument, which allows reading
    configurations from a string.
                                                      (Manuel López-Ibáñez)
